--- a/.github/workflows/deploy-prodrivenet.yml
+++ b/.github/workflows/deploy-prodrivenet.yml
@@ -16,16 +16,20 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
+          envs: DEPLOY_PAT
           script: |
             set -ex
             FRONTEND_DIR=/var/www/prodrivenet.com
             mkdir -p "$FRONTEND_DIR"
             git config --global --add safe.directory "$FRONTEND_DIR"
 
+            FE_URL="https://${DEPLOY_PAT}@github.com/E-Noer/ProDriveNet.git"
+
             if [ ! -d "$FRONTEND_DIR/.git" ]; then
-              git clone --depth 1 git@github.com:E-Noer/ProDriveNet.git "$FRONTEND_DIR"
+              git clone --depth 1 "$FE_URL" "$FRONTEND_DIR"
             else
               cd "$FRONTEND_DIR" \
+                && git remote set-url origin "$FE_URL" \
                 && git fetch --all \
                 && git reset --hard origin/main
             fi
